2019-01-24  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #24122]
	* elf/Makefile (tests): Add tst-audit13.
	(modules-names): Add tst-audit13mod1.
	(tst-audit13.out, LDFLAGS-tst-audit13mod1.so, tst-audit13-ENV): New
	rule.
	* elf/rtld.c (dl_main): Handle invalid audit module version.
	* elf/tst-audit13.c: New file.
	* elf/tst-audit13mod1.c: Likewise.

2019-01-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/faccessat.c (__faccessat_common): Check for errors
	returned by __hurd_at_flags.
	* hurd/lookup-at.c (__file_name_lookup_at): When at_flags contains
	AT_EMPTY_PATH, call __dir_lookup and __hurd_file_name_lookup_retry
	directly instead of __hurd_file_name_lookup.

2019-01-21  Joseph Myers  <joseph@codesourcery.com>

	* scripts/build-many-glibcs.py (Context.checkout): Default
	binutils version to 2.32 branch.

2019-01-21  Florian Weimer  <fweimer@redhat.com>

	[BZ #20018]
	CVE-2016-10739
	resolv: Reject trailing characters in host names
	* include/arpa/inet.h (__inet_aton_exact): Declare.
	(inet_aton): Remove hidden prototype.  No longer used internally.
	* nscd/gai.c (__inet_aton): Do not define.
	* nscd/gethstbynm3_r.c (__inet_aton): Likewise.
	* nss/digits_dots.c (__inet_aton): Likewise.
	(__nss_hostname_digits_dots_context): Call __inet_aton_exact.
	* resolv/Makefile (tests-internal): Add tst-inet_aton_exact.
	(tests): Add tst-resolv-nondecimal, tst-resolv-trailing.
	(tst-resolv-nondecimal): Link with libresolv.so and libpthread.
	(tst-resolv-trailing): Likewise.
	* resolv/Versions (GLIBC_PRIVATE): Export __inet_aton_exact from
	libc.
	* resolv/inet_addr.c (inet_aton_end): Remame from __inet_aton.
	Make static.  Add endp parameter.
	(__inet_aton_exact): New function.
	(__inet_aton_ignore_trailing): New function, aliased to inet_aton.
	(__inet_addr): Call inet_aton_end.
	* resolv/res_init.c (res_vinit_1): Truncate nameserver for IPv4,
	not just IPv6.  Call __inet_aton_exact.