@@ -1,5 +1,8 @@
 2019-01-24  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* support/xsigstack.c (MAP_NORESERVE, MAP_STACK): Define if they
+	are not defined.
+
 	[BZ #24122]
 	* elf/Makefile (tests): Add tst-audit13.
 	(modules-names): Add tst-audit13mod1.
